--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -634,6 +634,14 @@ textarea {
 }
 // Report Styles End
 
+.arabic-checkbox-label {
+  label {
+    margin-top: 14px;
+  }
+}
+.arabic-checkbox-input {
+  float: right;
+}
 /*
    React date picker customizing style
 */
@@ -863,6 +871,372 @@ th {
       font-weight: 500;
       font-size: 2rem;
       padding-left: 10px;
+    }
+  }
+}
+//Arabic Version
+.algaeh_Arabic_Version {
+
+.tab-container{
+  ul.nav{
+    direction: rtl;
+    padding-right:5px; 
+  }
+}
+
+  h6 {
+    text-align: right;
+  }
+  .Select-menu-outer {
+    text-align: right;
+  }
+
+  .Select-control {
+    direction: rtl;
+  }
+  .Select-control > *:last-child {
+    padding-right: 0px;
+    padding-left: 12px;
+  }
+  .Select-value-label {
+    padding: 0 4px;
+  }
+  div[numberbox="true"] {
+    input[type="text"] {
+      text-align: right !important;
+    }
+  }
+  .DayPickerInput {
+    // z-index: 2 !important;
+
+    input {
+      font: inherit;
+      color: currentColor;
+      border: 0;
+      margin: 0;
+      padding: 6px 0 7px;
+      box-sizing: content-box;
+      background: none;
+      vertical-align: middle;
+      -webkit-tap-highlight-color: transparent;
+      background-color: #fbfbfb;
+      min-width: 100%;
+      text-align: right;
+    }
+  }
+
+  label {
+    margin-bottom: 0px;
+    font-size: $fontSize;
+    font-family: $fontFamily;
+    text-transform: uppercase;
+    font-weight: 100;
+    -moz-osx-font-smoothing: $moz-osx-font-smoothing;
+    -webkit-font-smoothing: $webkit-font-smoothing;
+    text-align: right;
+  }
+
+  input[type="text"] {
+    font-size: $textFontSize;
+    padding: 4px 6px 4px;
+    border: 1px solid #d3d3d3;
+    border-radius: 4px;
+    background: #fff;
+    text-align: right;
+  }
+  input[type="color"] {
+    font-size: $textFontSize;
+    -webkit-appearance: none;
+    width: 32px;
+    height: 29px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #d3d3d3;
+    border-radius: 4px;
+    overflow: hidden;
+    text-align: right;
+  }
+  input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+  }
+  input[type="color"]::-webkit-color-swatch {
+    border: none;
+  }
+  .color-picker-icon {
+    position: absolute;
+    top: 24px;
+    left: 16px;
+    background: #fff;
+    padding: 3px 6px;
+    color: #616161;
+  }
+  textarea {
+    font-size: $textFontSize !important;
+    padding: 8px 6px 7px !important;
+    border: 1px solid #d3d3d3 !important;
+    border-radius: 4px !important;
+  }
+  // Report Styles Start
+
+  .report-section {
+    border: 1px solid #d3d3d3;
+    margin: 10px;
+    margin-top: 0px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  // Report Styles End
+
+  /*
+     React date picker customizing style
+  */
+  .text-arabic {
+    text-align: right;
+    display: block;
+    font-size: 0.9rem;
+  }
+  .algaeh-datePicker {
+    border: 1px solid #d3d3d3;
+    max-width: 100%;
+    border-radius: 4px;
+    text-align: right;
+    .react-date-picker__button {
+      border: none;
+      padding-top: 3px;
+      padding-bottom: 2px;
+    }
+    .react-date-picker {
+      width: 100%;
+      padding-left: 6px;
+    }
+    .react-date-picker__button {
+      width: 100%;
+    }
+    .react-date-picker__button__input {
+      margin-left: 0px;
+      min-width: inherit; //calc(4px + (4px * 3) + 6em + 0.434em);
+      font-size: 0.85rem;
+    }
+    button {
+      margin-left: 0px;
+      padding: 3px 6px !important;
+      svg {
+        height: 16px;
+      }
+    }
+  }
+
+  .mandatory {
+    .algaeh-datePicker {
+      background-color: none;
+      border: 1px solid #d9ae58;
+    }
+    .Select-placeholder {
+      background-color: none;
+      border: none;
+    }
+    .Select-control {
+      border: 1px solid #d9ae58;
+      direction: rtl;
+    }
+    input[type="text"] {
+      background-color: none;
+      border: 1px solid #d9ae58;
+      text-align: right;
+    }
+  }
+
+  .MuiInput-underline-90:before {
+    border: none !important;
+  }
+
+  input[type="text"]:disabled {
+    background: #f0f0f0;
+    border: 1px solid #d3d3d3;
+    color: #000;
+    font-weight: bold;
+  }
+  .is-disabled {
+    .Select-control {
+      border: 1px solid #d3d3d3;
+      padding: 0px 10px;
+      direction: rtl;
+    }
+    .Select-control > *:last-child {
+      padding-right: 0px;
+      padding-left: 12px;
+    }
+    .Select-value {
+      background: #f0f0f0;
+      color: #000;
+      font-weight: bold;
+
+      .Select-value-label {
+        padding: 0 4px;
+      }
+    }
+    .Select-arrow-zone {
+      display: none;
+    }
+    .Select-placeholder {
+      background: #f0f0f0;
+    }
+  }
+  .algaeh-datePicker .react-date-picker--disabled {
+    .react-date-picker__button {
+      padding-top: 3px;
+      padding-bottom: 3px;
+      button {
+        display: none;
+      }
+    }
+  }
+
+  .table-responsive {
+    border: 1px solid #e2e2e2;
+    border-radius: 4px;
+
+    .table {
+      width: 100%;
+      border-bottom: 1.5px solid #f2f2f2;
+      margin: 0;
+      thead {
+        // position: fixed;
+        // top: 50px;
+        // left: 0;
+        // right: 0;
+        // width: 100%;
+        // height: 50px;
+        // line-height: 3em;
+        // background: #eee;
+        // table-layout: fixed;
+        // display: table;
+
+        tr {
+          th {
+            border-bottom: 2px solid #34b8bc !important;
+            vertical-align: middle !important;
+            background: #e8feff !important;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            text-align: center;
+            label.style_Label {
+              font-weight: bold;
+            }
+          }
+        }
+      }
+      tbody {
+        height: 200px;
+        overflow: auto;
+        width: 100%;
+        tr {
+          cursor: pointer;
+        }
+        td {
+          vertical-align: middle;
+          white-space: nowrap;
+          font-size: 0.75rem;
+          text-align: center;
+        }
+      }
+      div {
+        div {
+          height: auto !important;
+          min-height: auto !important;
+        }
+      }
+    }
+  }
+  // .table-scroll {
+  //   position: absolute;
+  //   display: inline-block;
+  //   width: auto;
+  //   border-right: 1px solid #ddd;
+  // }
+
+  .scrolling table {
+    table-layout: inherit;
+    *margin-left: -100px; /*ie7*/
+  }
+  .scrolling td,
+  th {
+    vertical-align: top;
+    padding: 10px;
+    min-width: 100px;
+  }
+  .scrolling th {
+    position: absolute;
+    *position: relative; /*ie7*/
+    left: 0;
+    width: 120px;
+  }
+  .outer {
+    position: relative;
+  }
+  .inner {
+    overflow-x: auto;
+    overflow-y: visible;
+    margin-left: 120px;
+  }
+
+  .tab-container nav li label {
+    padding-top: "2px";
+  }
+
+  .DayPickerInput {
+    border-bottom: 1px dashed #000;
+  }
+  .primary-details {
+    padding-bottom: 10px;
+  }
+  /*
+   for dropdown list
+  */
+  .Select-menu-outer {
+    font-size: $textFontSize;
+  }
+  .Select-multi-value-wrapper {
+    font-size: $textFontSize;
+  }
+  .Select-placeholder,
+  .Select--single > .Select-control .Select-value {
+    padding-left: 0px;
+  }
+
+  .Select-input {
+    height: 27px;
+    padding-left: 10px;
+    padding-right: 10px;
+    vertical-align: middle;
+    input {
+      padding: 4px 0 4px;
+    }
+  }
+
+  .moveRadioButtons {
+    padding-left: 3px;
+    text-align: right;
+    label {
+      cursor: pointer;
+      margin-right: 7px;
+    }
+    input[type="radio"] {
+      cursor: pointer;
+    }
+  }
+  .colorPrimary {
+    background-color: #dbad64;
+
+    h2 {
+      color: #fff;
+      font-size: 3rem;
+      label {
+        font-weight: 500;
+        font-size: 2rem;
+        padding-left: 10px;
+      }
     }
   }
 }
