UI fix for atabic version

--- a/client/src/Components/common/BreadCrumb/breadcrumbAr.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumbAr.css
@@ -1,46 +1,46 @@
-.breadcrumb-fixed {
+.breadcrumbAr-fixed {
   height: "75px";
   background-color: "#ffffff";
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid #ced4da; }
 
-.breadCrumb-Data {
+.breadCrumbAr-Data {
   margin: 0;
   margin-top: 50px;
   background-color: #f8f8f8;
   height: 75px; }
-  .breadCrumb-Data .hdg_bredcrump {
+  .breadCrumbAr-Data .hdg_bredcrump {
     background: url(images/breadcrump_border_Ar.png) no-repeat top left #fff; }
-  .breadCrumb-Data .header {
+  .breadCrumbAr-Data .header {
     margin-top: 10px;
     text-align: right; }
-    .breadCrumb-Data .header label {
+    .breadCrumbAr-Data .header label {
       font-size: 1.4rem;
       font-weight: 300;
       text-transform: capitalize;
       text-align: right; }
-  .breadCrumb-Data ul {
+  .breadCrumbAr-Data ul {
     list-style: none;
     display: flex;
     padding: 0;
     margin: 0;
     float: right; }
-    .breadCrumb-Data ul li {
+    .breadCrumbAr-Data ul li {
       color: #d3d3d3;
       font-size: 0.75rem; }
-      .breadCrumb-Data ul li a label {
+      .breadCrumbAr-Data ul li a label {
         text-transform: capitalize; }
-  .breadCrumb-Data .actions-area {
+  .breadCrumbAr-Data .actions-area {
     padding-top: 1.5%;
     padding-right: 3%; }
-    .breadCrumb-Data .actions-area li span {
+    .breadCrumbAr-Data .actions-area li span {
       padding-top: 24px;
       width: 50px;
       display: inline-block; }
-      .breadCrumb-Data .actions-area li span i {
+      .breadCrumbAr-Data .actions-area li span i {
         padding-right: 10px;
         display: inline; }
-    .breadCrumb-Data .actions-area .finderImg {
+    .breadCrumbAr-Data .actions-area .finderImg {
       height: 27px;
       margin-top: 20px;
       margin-right: 15px;
@@ -58,30 +58,30 @@
   color: #979292;
   text-transform: uppercase; }
 
-.print-area div {
+.printAr-area div {
   float: left;
   padding-right: 16px;
   height: 75px;
   border-right: 1px solid #adaaaa;
   border-left: none; }
-  .print-area div ul {
+  .printAr-area div ul {
     margin-left: 50%; }
-  .print-area div i {
+  .printAr-area div i {
     color: #000000;
     padding-top: 25px; }
 
-.print-area .printImg {
+.printAr-area .printImg {
   height: 36px;
   cursor: pointer; }
 
-.print-area .printMenuDisplay {
+.printAr-area .printMenuDisplay {
   padding: 19px 9px; }
 
-.print-area .printMenuDisplay:hover .printActionMenu,
-.print-area .printImg:hover .printActionMenu {
+.printAr-area .printMenuDisplay:hover .printActionMenu,
+.printAr-area .printImg:hover .printActionMenu {
   display: block; }
 
-.print-area .printActionMenu {
+.printAr-area .printActionMenu {
   cursor: pointer;
   display: none;
   box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.3);
@@ -93,12 +93,12 @@
   top: 75px;
   position: absolute;
   overflow: hidden; }
-  .print-area .printActionMenu li {
+  .printAr-area .printActionMenu li {
     list-style: none;
     border-bottom: 1px solid #000;
     padding: 15px; }
 
-.print-area .printActionMenu:hover {
+.printAr-area .printActionMenu:hover {
   display: block; }
 
 .third-position {
