--- a/client/src/Components/common/BreadCrumb/breadcrumbAr.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumbAr.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/algaehCssVariables.scss";
-.breadcrumb-fixed {
+.breadcrumbAr-fixed {
   height: "75px";
   background-color: "#ffffff";
   // border-bottom: 2px solid #ced4da;
@@ -7,7 +7,7 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid #ced4da;
 }
-.breadCrumb-Data {
+.breadCrumbAr-Data {
   margin: 0;
   margin-top: 50px;
   background-color: #f8f8f8;
@@ -79,7 +79,7 @@
   color: #979292;
   text-transform: uppercase;
 }
-.print-area {
+.printAr-area {
   div {
     float: left;
     padding-right: 16px;
