--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -978,10 +978,7 @@ th {
     font-size: 0.9rem;
   }
   .algaeh-datePicker {
-    border: 1px solid #d3d3d3;
-    max-width: 100%;
-    border-radius: 4px;
-    text-align: right;
+    position: relative;
     .react-date-picker__button {
       border: none;
       padding-top: 3px;
