Added Appointment status legends in the Appointment Screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,8 @@
   /* Btn Grey Salsa */
   /* Btn Red */
   /* Btn Red */ }
+  :global .displayInlineBlock {
+    display: inline-block; }
   :global .bordered-layout {
     border: 1px solid #c1c1c1;
     min-height: 70px;
