--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -562,7 +562,8 @@ label {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+input[type="time"] {
   font-size: $textFontSize;
   padding: 4px 6px 4px;
   border: 1px solid #d3d3d3;
@@ -637,9 +638,8 @@ textarea {
   position: relative;
 
   input[type="date"] {
-    margin: 1px;
     font-size: 0.8rem;
-    padding: 3px 3px 2px;
+    padding: 4px 3px 3px;
     width: 99%;
     text-transform: uppercase;
     border: 1px solid #d3d3d3;
@@ -661,6 +661,13 @@ textarea {
     border: 1px dashed #d3d3d3;
     color: #000;
     font-weight: bold;
+  }
+  button {
+    margin-left: 0px;
+    padding: 3px 6px !important;
+    svg {
+      height: 16px;
+    }
   }
 }
 .autoselect-Div {
@@ -995,33 +1002,6 @@ th {
     text-align: right;
     display: block;
     font-size: 0.9rem;
-  }
-  .algaeh-datePicker {
-    position: relative;
-    .react-date-picker__button {
-      border: none;
-      padding-top: 3px;
-      padding-bottom: 2px;
-    }
-    .react-date-picker {
-      width: 100%;
-      padding-left: 6px;
-    }
-    .react-date-picker__button {
-      width: 100%;
-    }
-    .react-date-picker__button__input {
-      margin-left: 0px;
-      min-width: inherit; //calc(4px + (4px * 3) + 6em + 0.434em);
-      font-size: 0.85rem;
-    }
-    button {
-      margin-left: 0px;
-      padding: 3px 6px !important;
-      svg {
-        height: 16px;
-      }
-    }
   }
 
   .mandatory {
