--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -53,41 +53,75 @@
   color: #009e94;
   cursor: pointer; }
 
+.appointment table .dynSlot {
+  position: absolute;
+  top: 2px;
+  left: 6px;
+  font-size: 0.7rem;
+  color: #7d7d7d; }
+
+.appointment table .dynPatient {
+  display: inline-block;
+  text-align: left;
+  width: 100%;
+  padding-left: 5px; }
+
+.appointment table .tbl-subHdg {
+  text-transform: uppercase;
+  font-size: 0.7rem !important;
+  border: 1px solid #009e94 !important;
+  background: #fffff4;
+  color: #5a5a5a; }
+
 .appointment .tg {
   border-collapse: collapse;
   border-spacing: 0; }
-
-.appointment .tg td {
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  padding: 10px 5px;
-  border-style: solid;
-  border-width: 1px;
-  overflow: hidden;
-  word-break: normal;
-  border-color: black; }
-
-.appointment .tg th {
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  padding: 10px 5px;
-  border-style: solid;
-  border-width: 1px;
-  overflow: hidden;
-  word-break: normal;
-  border-color: black; }
-
-.appointment .tg .tg-baqh {
-  text-align: center;
-  vertical-align: top; }
-
-.appointment .tg .tg-c3ow {
-  border-color: inherit;
-  text-align: center;
-  vertical-align: top; }
-
-.appointment .tg .tg-amwm {
-  font-weight: bold;
-  text-align: center;
-  vertical-align: top; }
+  .appointment .tg th {
+    font-family: Arial, sans-serif;
+    font-size: 0.9rem;
+    font-weight: normal;
+    overflow: hidden;
+    word-break: normal;
+    border: 1px solid lightgrey;
+    border-bottom: 1px solid #000;
+    border-top: 1px solid #000; }
+  .appointment .tg td {
+    font-family: Arial, sans-serif;
+    font-size: 0.8rem;
+    overflow: hidden;
+    word-break: normal;
+    border: 1px solid #009e94;
+    border-bottom: 1px solid lightgrey;
+    border-top: 1px solid lightgrey; }
+  .appointment .tg .tg-baqh {
+    text-align: center;
+    position: relative;
+    padding: 15px 0 5px;
+    height: 55px; }
+    .appointment .tg .tg-baqh i {
+      visibility: hidden;
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      border: 1px solid #d3d3d3;
+      padding: 3px; }
+    .appointment .tg .tg-baqh i.fa-edit {
+      background: gray; }
+    .appointment .tg .tg-baqh i.fa-plus {
+      background: #eafffd; }
+  .appointment .tg .tg-baqh:hover i {
+    visibility: visible; }
+  .appointment .tg .tg-baqh:nth-child(odd) {
+    border-right: 1px dashed lightgrey !important; }
+  .appointment .tg .tg-baqh:nth-child(even) {
+    border-left: none !important; }
+    .appointment .tg .tg-baqh:nth-child(even) .dynSlot {
+      visibility: hidden; }
+  .appointment .tg .tg-c3ow {
+    border-color: inherit;
+    text-align: center;
+    vertical-align: top; }
+  .appointment .tg .tg-amwm {
+    font-weight: bold;
+    text-align: center;
+    vertical-align: top; }
