--- a/client/src/Components/OPBilling/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.css
+++ b/client/src/Components/OPBilling/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.css
@@ -3,7 +3,11 @@
   border-radius: 5px; }
 
 .htpl-primary-display-insurance-form .primary-details {
+  padding: 5px;
   border-right: 1px solid #000; }
+
+.htpl-primary-display-insurance-form .secondary-details {
+  padding: 5px; }
 
 .htpl-primary-display-insurance-form mark {
   background: none;
